// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`workspaces alias > function style 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer build
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/nadle.config.ts and 2 other(s) files

[log] <Yellow>></Yellow> Task <Bold>packages:one:build</BoldDim> <Yellow>STARTED</Yellow>

Build one
[log]
<Green>✓</Green> Task <Bold>packages:one:build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>two:build</BoldDim> <Yellow>STARTED</Yellow>

Build two
[log]
<Green>✓</Green> Task <Bold>two:build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>build</BoldDim> <Yellow>STARTED</Yellow>

Build root
[log]
<Green>✓</Green> Task <Bold>build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>3</BoldDim> tasks executed
`;

exports[`workspaces alias > object style 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer build
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/nadle.config.ts and 2 other(s) files

[log] <Yellow>></Yellow> Task <Bold>one:build</BoldDim> <Yellow>STARTED</Yellow>

Build one
[log]
<Green>✓</Green> Task <Bold>one:build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>packages:two:build</BoldDim> <Yellow>STARTED</Yellow>

Build two
[log]
<Green>✓</Green> Task <Bold>packages:two:build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>build</BoldDim> <Yellow>STARTED</Yellow>

Build root
[log]
<Green>✓</Green> Task <Bold>build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>3</BoldDim> tasks executed
`;

exports[`workspaces alias > root alias 1`] = `
---------- Context -----------
Working Directory: /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__
Command: /ROOT/nadle.mjs --max-workers 1 --no-footer build
---------- Stdout ------------
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/monorepo/__temp__/__{hash}__/nadle.config.ts and 1 other(s) files

[log] <Yellow>></Yellow> Task <Bold>packages:one:build</BoldDim> <Yellow>STARTED</Yellow>

Build one
[log]
<Green>✓</Green> Task <Bold>packages:one:build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log] <Yellow>></Yellow> Task <Bold>my-root:build</BoldDim> <Yellow>STARTED</Yellow>

Build root
[log]
<Green>✓</Green> Task <Bold>my-root:build</BoldDim> <Green>DONE</Green> <Dim>{duration}</BoldDim>
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>2</BoldDim> tasks executed
`;
